@@ -5,6 +5,8 @@
 2. Work-around drag highlight sometimes reamining after drop.
 3. Update volume slider collapsing code to handle window controls overlay.
 4. Add Wiim player icon.
+5. If using 18px or more of bottom padding then try to ensure menus do not
+   go into padded area.
 
 5.4.1
 -----
